--- a/PyODAM_api_demo.ipynb
+++ b/PyODAM_api_demo.ipynb
@@ -9,11 +9,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load http://pmb-bordeaux.fr/scripts/PyODAM.py"
+    "# %load http://pmb-bordeaux.fr/scripts/PyODAM.py\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "\n",
+    "def getDataFromODAM(dataset, subset='', query=''):\n",
+    "    # See http://pmb-bordeaux.fr/odamsw/\n",
+    "    headers = {'authorization': \"Basic API Key Ommitted\", 'accept': \"text/csv\"}\n",
+    "    urlcomp = 'http://pmb-bordeaux.fr/getdata/tsv/'+dataset\n",
+    "    if subset:\n",
+    "        urlcomp = urlcomp+'/('+subset+')'\n",
+    "    if query:\n",
+    "        urlcomp = urlcomp+'/'+query\n",
+    "\n",
+    "    ## API Call to retrieve report\n",
+    "    rcomp = requests.get(urlcomp, headers=headers)\n",
+    "\n",
+    "    ## API Results\n",
+    "    data = rcomp.text\n",
+    "\n",
+    "    ## Parse data into a DataFrame\n",
+    "    ## see https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html\n",
+    "    labels = data.split('\\n')[0].split('\\t')\n",
+    "    df = pd.DataFrame([x.split('\\t') for x in data.split('\\n')], columns=labels)\n",
+    "    df.drop(df.index[0], inplace=True)\n",
+    "    df = df.mask(df.eq('None')).dropna().reset_index()\n",
+    "\n",
+    "    ## Convert all variables (columns) to numeric when possible\n",
+    "    ## see http://queirozf.com/entries/pandas-dataframe-examples-column-operations\n",
+    "    for l in labels:\n",
+    "        try:\n",
+    "            df[l] = pd.to_numeric(df[l])\n",
+    "        except:\n",
+    "            pass\n",
+    "\n",
+    "    # Return Data.frame\n",
+    "    return df\n",
+    "\n",
+    "def intersection(lst1, lst2): \n",
+    "    lst3 = [value for value in lst1 if value in lst2] \n",
+    "    return lst3 \n",
+    "\n",
+    "def getVarNum(dataframe):\n",
+    "    varnum=[]\n",
+    "    for l in dataframe.columns:\n",
+    "        try:\n",
+    "            dataframe[l] = pd.to_numeric(dataframe[l])\n",
+    "            varnum.append(l)\n",
+    "        except:\n",
+    "            pass\n",
+    "    return varnum\n",
+    "\n",
+    "def getSubsetFromODAM(dataset, subset='', query=''):\n",
+    "    df1 = getDataFromODAM(dataset, subset, query)\n",
+    "    df2 = getDataFromODAM(dataset, subset, 'identifier')\n",
+    "    df3 = getDataFromODAM(dataset, subset, 'factor')\n",
+    "    df4 = getDataFromODAM(dataset, subset, 'quantitative')\n",
+    "    df5 = getDataFromODAM(dataset, subset, 'qualitative')\n",
+    "\n",
+    "    # Keep only columns that have been converted to numeric (thus removing columns with NA)\n",
+    "    S = subset.split(',')\n",
+    "    numvars = []\n",
+    "    for s in S:\n",
+    "        numvars = numvars + intersection(df4[df4.Subset==s]['Attribute'], getVarNum(df1))\n",
+    "\n",
+    "    list1, list2 = ['data', 'identifier', 'factor', 'quantitative', 'qualitative', 'numvars' ], \\\n",
+    "                   [df1, df2, df3, df4, df5, numvars ]\n",
+    "    d = dict( zip( list1, list2 ))\n",
+    "    return(d)\n",
+    "\n",
+    "def convertDateToStr(DataNum):\n",
+    "    dateStr = [ ( pd.to_datetime('1899-12-30') + pd.to_timedelta(x,'D') ).strftime(\"%m/%d/%Y\") for x in DataNum ]\n",
+    "    return(dateStr)\n",
+    "\n",
+    "def convertTimeToStr(TimeNum):\n",
+    "    timeStr = [ ( pd.to_datetime('1899-12-30') + pd.to_timedelta(x,'D') ).strftime(\"%H:%M\") for x in TimeNum ]\n",
+    "    return(timeStr)\n",
+    "\n"
    ]
   },
   {
