--- a/PyODAM_api_PCA.ipynb
+++ b/PyODAM_api_PCA.ipynb
@@ -9,11 +9,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load http://pmb-bordeaux.fr/scripts/PyODAM.py"
+    "# %load http://pmb-bordeaux.fr/scripts/PyODAM.py\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "\n",
+    "def getDataFromODAM(dataset, subset='', query=''):\n",
+    "    # See http://pmb-bordeaux.fr/odamsw/\n",
+    "    headers = {'authorization': \"Basic API Key Ommitted\", 'accept': \"text/csv\"}\n",
+    "    urlcomp = 'http://pmb-bordeaux.fr/getdata/tsv/'+dataset\n",
+    "    if subset:\n",
+    "        urlcomp = urlcomp+'/('+subset+')'\n",
+    "    if query:\n",
+    "        urlcomp = urlcomp+'/'+query\n",
+    "\n",
+    "    ## API Call to retrieve report\n",
+    "    rcomp = requests.get(urlcomp, headers=headers)\n",
+    "\n",
+    "    ## API Results\n",
+    "    data = rcomp.text\n",
+    "\n",
+    "    ## Parse data into a DataFrame\n",
+    "    ## see https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html\n",
+    "    labels = data.split('\\n')[0].split('\\t')\n",
+    "    df = pd.DataFrame([x.split('\\t') for x in data.split('\\n')], columns=labels)\n",
+    "    df.drop(df.index[0], inplace=True)\n",
+    "    df = df.mask(df.eq('None')).dropna().reset_index()\n",
+    "\n",
+    "    ## Convert all variables (columns) to numeric when possible\n",
+    "    ## see http://queirozf.com/entries/pandas-dataframe-examples-column-operations\n",
+    "    for l in labels:\n",
+    "        try:\n",
+    "            df[l] = pd.to_numeric(df[l])\n",
+    "        except:\n",
+    "            pass\n",
+    "\n",
+    "    # Return Data.frame\n",
+    "    return df\n",
+    "\n",
+    "def intersection(lst1, lst2): \n",
+    "    lst3 = [value for value in lst1 if value in lst2] \n",
+    "    return lst3 \n",
+    "\n",
+    "def getVarNum(dataframe):\n",
+    "    varnum=[]\n",
+    "    for l in dataframe.columns:\n",
+    "        try:\n",
+    "            dataframe[l] = pd.to_numeric(dataframe[l])\n",
+    "            varnum.append(l)\n",
+    "        except:\n",
+    "            pass\n",
+    "    return varnum\n",
+    "\n",
+    "def getSubsetFromODAM(dataset, subset='', query=''):\n",
+    "    df1 = getDataFromODAM(dataset, subset, query)\n",
+    "    df2 = getDataFromODAM(dataset, subset, 'identifier')\n",
+    "    df3 = getDataFromODAM(dataset, subset, 'factor')\n",
+    "    df4 = getDataFromODAM(dataset, subset, 'quantitative')\n",
+    "    df5 = getDataFromODAM(dataset, subset, 'qualitative')\n",
+    "\n",
+    "    # Keep only columns that have been converted to numeric (thus removing columns with NA)\n",
+    "    S = subset.split(',')\n",
+    "    numvars = []\n",
+    "    for s in S:\n",
+    "        numvars = numvars + intersection(df4[df4.Subset==s]['Attribute'], getVarNum(df1))\n",
+    "\n",
+    "    list1, list2 = ['data', 'identifier', 'factor', 'quantitative', 'qualitative', 'numvars' ], \\\n",
+    "                   [df1, df2, df3, df4, df5, numvars ]\n",
+    "    d = dict( zip( list1, list2 ))\n",
+    "    return(d)\n",
+    "\n",
+    "def convertDateToStr(DataNum):\n",
+    "    dateStr = [ ( pd.to_datetime('1899-12-30') + pd.to_timedelta(x,'D') ).strftime(\"%m/%d/%Y\") for x in DataNum ]\n",
+    "    return(dateStr)\n",
+    "\n",
+    "def convertTimeToStr(TimeNum):\n",
+    "    timeStr = [ ( pd.to_datetime('1899-12-30') + pd.to_timedelta(x,'D') ).strftime(\"%H:%M\") for x in TimeNum ]\n",
+    "    return(timeStr)\n",
+    "\n"
    ]
   },
   {
@@ -25,11 +101,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load http://pmb-bordeaux.fr/scripts/PyODAM_pca.py"
+    "# %load http://pmb-bordeaux.fr/scripts/PyODAM_pca.py\n",
+    "# See https://towardsdatascience.com/pca-using-python-scikit-learn-e653f8989e60\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.decomposition import PCA\n",
+    "\n",
+    "def PCA_compute(X, Y, n=2, scale=True):\n",
+    "\n",
+    "    # Standardizing the features\n",
+    "    if scale:\n",
+    "        X = StandardScaler().fit_transform(X)\n",
+    "\n",
+    "    # PCA Projection to 2D\n",
+    "    pca = PCA(svd_solver='full', n_components=n)\n",
+    "    principalComponents = pca.fit_transform(X)\n",
+    "    principalDf = pd.DataFrame(data = principalComponents\n",
+    "                             , columns = [x+y for x,y in zip(['PC']*n, [ str(x) for x in range(1, n+1) ])])\n",
+    "    d = dict( zip( ['Scores', 'Factor', 'EV'], [ principalDf, Y, pca.explained_variance_ratio_*100 ] ))\n",
+    "    return(d)\n",
+    "\n",
+    "# https://nbviewer.jupyter.org/github/ipython/ipython/blob/1.x/examples/notebooks/Part%203%20-%20Plotting%20with%20Matplotlib.ipynb\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# See https://matplotlib.org/index.html\n",
+    "#     https://www.data-blogger.com/2017/11/15/python-matplotlib-pyplot-a-perfect-combination/\n",
+    "from matplotlib import pyplot as plt\n",
+    "import matplotlib as mpl\n",
+    "import numpy as np\n",
+    "\n",
+    "def plotPCA(pca, pc1=1, pc2=2, factorlevels=None, colors=[ 'r', 'b', 'g', 'm', 'y', 'c' ]):\n",
+    "    if (factorlevels is None):\n",
+    "        factorlevels = []\n",
+    "        for f in pca['Factor']:\n",
+    "            if f not in factorlevels:\n",
+    "                factorlevels.append(f)\n",
+    "    factorlevels.sort()\n",
+    "    \n",
+    "    n = len(factorlevels)\n",
+    "    c1=np.array(mpl.colors.to_rgb('red'))\n",
+    "    c2=np.array(mpl.colors.to_rgb('green'))\n",
+    "    if (colors is None):\n",
+    "        colors = [ mpl.colors.to_hex((1-mix/(n-1))*c1 + mix/(n-1)*c2) for mix in range(0,n) ]\n",
+    "\n",
+    "    # Visualize 2D Projection\n",
+    "    fig = plt.figure(figsize = (12,12))\n",
+    "    ax = fig.add_subplot(1,1,1) \n",
+    "    ax.set_xlabel('Principal Component '+str(pc1)+' ('+str(round(pca['EV'][pc1-1],2))+')', fontsize = 15)\n",
+    "    ax.set_ylabel('Principal Component '+str(pc2)+' ('+str(round(pca['EV'][pc2-1],2))+')', fontsize = 15)\n",
+    "    ax.set_title('PCA', fontsize = 20)\n",
+    "    n = max([pc1,pc2])\n",
+    "    cols = np.asarray([x+y for x,y in zip(['PC']*n, [ str(x) for x in range(1, n+2) ])])\n",
+    "    for target, color in zip(factorlevels,colors):\n",
+    "        indicesToKeep = pca['Factor'] == target\n",
+    "        ax.scatter(pca['Scores'].loc[indicesToKeep, cols[pc1-1]]\n",
+    "                 , pca['Scores'].loc[indicesToKeep, cols[pc2-1]]\n",
+    "                 , c = color\n",
+    "                 , s = 50)\n",
+    "    ax.legend(factorlevels)\n",
+    "    ax.grid()\n",
+    "\n"
    ]
   },
   {
