--- a/PyODAM_api_PCA.ipynb
+++ b/PyODAM_api_PCA.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load http://pmb-bordeaux.fr/scripts/PyODAM.py\n"
+    "%load http://pmb-bordeaux.fr/PyODAM/PyODAM.py\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load http://pmb-bordeaux.fr/scripts/PyODAM_pca.py\n"
+    "%load http://pmb-bordeaux.fr/PyODAM/PyODAM_pca.py\n"
    ]
   },
   {
