--- a/PyODAM_api_demo.ipynb
+++ b/PyODAM_api_demo.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load http://pmb-bordeaux.fr/scripts/PyODAM.py\n"
+    "%load http://pmb-bordeaux.fr/PyODAM/PyODAM.py\n"
    ]
   },
   {
