--- a/PyODAM_demo.ipynb
+++ b/PyODAM_demo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Load the source code of the API call"
+    "### import the PyODAM module"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load http://pmb-bordeaux.fr/PyODAM/PyODAM.py"
+    "import PyODAM as po"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "source": [
     "# Get the subset list of a dataset\n",
     "dataset = 'frim1'\n",
-    "meta = getDataFromODAM(dataset)\n",
+    "meta = po.getDataFromODAM(dataset)\n",
     "meta[['index', 'LinkID','Subset','Identifier', 'Description']]"
    ]
   },
@@ -210,7 +210,7 @@
        "Index(['index', 'PlantID', 'Rank', 'PlantNum', 'Treatment', 'SampleID',\n",
        "       'Truss', 'DevStage', 'FruitAge', 'HarvestDate', 'HarvestHour',\n",
        "       'FruitPosition', 'FruitDiameter', 'FruitHeight', 'FruitFW', 'FruitDW',\n",
-       "       'DW', 'AliquotID', 'PGM', 'cFBPase', 'PyrK', 'CitS', 'PPI', 'Aconitase',\n",
+       "       'DW', 'AliquotID', 'PGM', 'cFBPase', 'PyrK', 'CitS', 'PFP', 'Aconitase',\n",
        "       'PFK', 'FruK', 'pFBPase', 'GluK', 'NAD_ISODH', 'Enolase', 'NADP_ISODH',\n",
        "       'PEPC', 'Aldolase', 'Succ_CoA_ligase', 'NAD_MalDH', 'AlaAT', 'Fumarase',\n",
        "       'AspAT', 'NADP_GluDH', 'NAD_GAPDH', 'NADP_GAPDH', 'NAD_GluDH', 'TPI',\n",
@@ -233,7 +233,7 @@
    "source": [
     "# Get all values of a merged data subsets ( both activome & qNMR_metabofor) the specific 'sample' entry equal to 365\n",
     "subset = 'activome,qNMR_metabo'\n",
-    "df = getSubsetFromODAM(dataset, subset,'sample/365?limit=10')\n",
+    "df = po.getSubsetFromODAM(dataset, subset,'sample/365?limit=10')\n",
     "data = df['data']\n",
     "\n",
     "# View all merged subset columns\n",
@@ -447,8 +447,8 @@
    ],
    "source": [
     "# Convert both data and time in MS Excel format into String\n",
-    "data.HarvestDate = convertDateToStr(data.HarvestDate)\n",
-    "data.HarvestHour = convertTimeToStr(data.HarvestHour)\n",
+    "data.HarvestDate = po.convertDateToStr(data.HarvestDate)\n",
+    "data.HarvestHour = po.convertTimeToStr(data.HarvestHour)\n",
     "data"
    ]
   },
@@ -802,11 +802,11 @@
        "      <td>9</td>\n",
        "      <td>10</td>\n",
        "      <td>activome</td>\n",
-       "      <td>PPI</td>\n",
-       "      <td>PPI (nmol/gFW/min)</td>\n",
+       "      <td>PFP</td>\n",
+       "      <td>6-phosphofructokinase (nmol/gFW/min)</td>\n",
        "      <td>numeric</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>http://purl.obolibrary.org/obo/GO_0047334</td>\n",
+       "      <td>EC 2.7.1.90 6-phosphofructokinase</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
@@ -833,7 +833,7 @@
        "6       7  activome        cFBPase   \n",
        "7       8  activome           PyrK   \n",
        "8       9  activome           CitS   \n",
-       "9      10  activome            PPI   \n",
+       "9      10  activome            PFP   \n",
        "10     11  activome      Aconitase   \n",
        "\n",
        "                                          Description     Type  \\\n",
@@ -846,7 +846,7 @@
        "6     cytosolic Fru-1,6-bisphosphatase (nmol/gFW/min)  numeric   \n",
        "7                      Pyruvate Kinase (nmol/gFW/min)  numeric   \n",
        "8               Citrate Synthase Total (nmol/gFW/min)  numeric   \n",
-       "9                                  PPI (nmol/gFW/min)  numeric   \n",
+       "9                6-phosphofructokinase (nmol/gFW/min)  numeric   \n",
        "10                           Aconitase (nmol/gFW/min)  numeric   \n",
        "\n",
        "                                   CV_Term_ID  \\\n",
@@ -859,7 +859,7 @@
        "6   http://purl.obolibrary.org/obo/GO_0042132   \n",
        "7   http://purl.obolibrary.org/obo/GO_0004743   \n",
        "8   http://purl.obolibrary.org/obo/GO_0036440   \n",
-       "9                                               \n",
+       "9   http://purl.obolibrary.org/obo/GO_0047334   \n",
        "10   http://purl.obolibrary.org/obo/GO_000394   \n",
        "\n",
        "                           CV_Term_Name  \n",
@@ -872,7 +872,7 @@
        "6   EC 3.1.3.11 fructose-bisphosphatase  \n",
        "7           EC 2.7.1.40 pyruvate kinase  \n",
        "8           EC 2.3.3.1 citrate synthase  \n",
-       "9                                        \n",
+       "9     EC 2.7.1.90 6-phosphofructokinase  \n",
        "10                 EC 4.2.1.3 Aconitase  "
       ]
      },
@@ -917,7 +917,7 @@
        "      <th>cFBPase</th>\n",
        "      <th>PyrK</th>\n",
        "      <th>CitS</th>\n",
-       "      <th>PPI</th>\n",
+       "      <th>PFP</th>\n",
        "      <th>Aconitase</th>\n",
        "      <th>PFK</th>\n",
        "      <th>FruK</th>\n",
@@ -1063,7 +1063,7 @@
        "</div>"
       ],
       "text/plain": [
-       "  PGM  cFBPase    PyrK  CitS     PPI  Aconitase    PFK   FruK  pFBPase   GluK  \\\n",
+       "  PGM  cFBPase    PyrK  CitS     PFP  Aconitase    PFK   FruK  pFBPase   GluK  \\\n",
        "0  NA    10.92  304.68  6.12  576.56     145.05  73.97  73.88    44.38  26.46   \n",
        "1  NA    10.92  304.68  6.12  576.56     145.05  73.97  73.88    44.38  26.46   \n",
        "2  NA    10.92  304.68  6.12  576.56     145.05  73.97  73.88    44.38  26.46   \n",
@@ -1313,277 +1313,6 @@
     "# Select the variables from the merged data belongings to the 'qNMR_metabo' data subset\n",
     "data[quantitative[quantitative.Subset=='qNMR_metabo']['Attribute']]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>glucose</th>\n",
-       "      <th>saccharose</th>\n",
-       "      <th>fructose</th>\n",
-       "      <th>galactose</th>\n",
-       "      <th>mannose</th>\n",
-       "      <th>rhamnose</th>\n",
-       "      <th>acetate</th>\n",
-       "      <th>chlorogenate</th>\n",
-       "      <th>citrate</th>\n",
-       "      <th>fumarate</th>\n",
-       "      <th>...</th>\n",
-       "      <th>glutamate</th>\n",
-       "      <th>isoleucine</th>\n",
-       "      <th>phenylalanine</th>\n",
-       "      <th>tryptophane</th>\n",
-       "      <th>tyrosine</th>\n",
-       "      <th>valine</th>\n",
-       "      <th>pyroglutamate</th>\n",
-       "      <th>trigonelline</th>\n",
-       "      <th>choline</th>\n",
-       "      <th>inositol</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>756.688509</td>\n",
-       "      <td>33.907515</td>\n",
-       "      <td>975.485366</td>\n",
-       "      <td>1.544911</td>\n",
-       "      <td>4.150709</td>\n",
-       "      <td>4.02276</td>\n",
-       "      <td>4.296019</td>\n",
-       "      <td>2.428279</td>\n",
-       "      <td>182.777927</td>\n",
-       "      <td>0.079999</td>\n",
-       "      <td>...</td>\n",
-       "      <td>45.478818</td>\n",
-       "      <td>2.750447</td>\n",
-       "      <td>5.153496</td>\n",
-       "      <td>0.345287</td>\n",
-       "      <td>1.624778</td>\n",
-       "      <td>1.372135</td>\n",
-       "      <td>24.046419</td>\n",
-       "      <td>1.078428</td>\n",
-       "      <td>5.936098</td>\n",
-       "      <td>65.898711</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>756.688509</td>\n",
-       "      <td>33.907515</td>\n",
-       "      <td>975.485366</td>\n",
-       "      <td>1.544911</td>\n",
-       "      <td>4.150709</td>\n",
-       "      <td>4.02276</td>\n",
-       "      <td>4.296019</td>\n",
-       "      <td>2.428279</td>\n",
-       "      <td>182.777927</td>\n",
-       "      <td>0.079999</td>\n",
-       "      <td>...</td>\n",
-       "      <td>45.478818</td>\n",
-       "      <td>2.750447</td>\n",
-       "      <td>5.153496</td>\n",
-       "      <td>0.345287</td>\n",
-       "      <td>1.624778</td>\n",
-       "      <td>1.372135</td>\n",
-       "      <td>24.046419</td>\n",
-       "      <td>1.078428</td>\n",
-       "      <td>5.936098</td>\n",
-       "      <td>65.898711</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>756.688509</td>\n",
-       "      <td>33.907515</td>\n",
-       "      <td>975.485366</td>\n",
-       "      <td>1.544911</td>\n",
-       "      <td>4.150709</td>\n",
-       "      <td>4.02276</td>\n",
-       "      <td>4.296019</td>\n",
-       "      <td>2.428279</td>\n",
-       "      <td>182.777927</td>\n",
-       "      <td>0.079999</td>\n",
-       "      <td>...</td>\n",
-       "      <td>45.478818</td>\n",
-       "      <td>2.750447</td>\n",
-       "      <td>5.153496</td>\n",
-       "      <td>0.345287</td>\n",
-       "      <td>1.624778</td>\n",
-       "      <td>1.372135</td>\n",
-       "      <td>24.046419</td>\n",
-       "      <td>1.078428</td>\n",
-       "      <td>5.936098</td>\n",
-       "      <td>65.898711</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>756.688509</td>\n",
-       "      <td>33.907515</td>\n",
-       "      <td>975.485366</td>\n",
-       "      <td>1.544911</td>\n",
-       "      <td>4.150709</td>\n",
-       "      <td>4.02276</td>\n",
-       "      <td>4.296019</td>\n",
-       "      <td>2.428279</td>\n",
-       "      <td>182.777927</td>\n",
-       "      <td>0.079999</td>\n",
-       "      <td>...</td>\n",
-       "      <td>45.478818</td>\n",
-       "      <td>2.750447</td>\n",
-       "      <td>5.153496</td>\n",
-       "      <td>0.345287</td>\n",
-       "      <td>1.624778</td>\n",
-       "      <td>1.372135</td>\n",
-       "      <td>24.046419</td>\n",
-       "      <td>1.078428</td>\n",
-       "      <td>5.936098</td>\n",
-       "      <td>65.898711</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>756.688509</td>\n",
-       "      <td>33.907515</td>\n",
-       "      <td>975.485366</td>\n",
-       "      <td>1.544911</td>\n",
-       "      <td>4.150709</td>\n",
-       "      <td>4.02276</td>\n",
-       "      <td>4.296019</td>\n",
-       "      <td>2.428279</td>\n",
-       "      <td>182.777927</td>\n",
-       "      <td>0.079999</td>\n",
-       "      <td>...</td>\n",
-       "      <td>45.478818</td>\n",
-       "      <td>2.750447</td>\n",
-       "      <td>5.153496</td>\n",
-       "      <td>0.345287</td>\n",
-       "      <td>1.624778</td>\n",
-       "      <td>1.372135</td>\n",
-       "      <td>24.046419</td>\n",
-       "      <td>1.078428</td>\n",
-       "      <td>5.936098</td>\n",
-       "      <td>65.898711</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      glucose  saccharose    fructose  galactose   mannose  rhamnose  \\\n",
-       "0  756.688509   33.907515  975.485366   1.544911  4.150709   4.02276   \n",
-       "1  756.688509   33.907515  975.485366   1.544911  4.150709   4.02276   \n",
-       "2  756.688509   33.907515  975.485366   1.544911  4.150709   4.02276   \n",
-       "3  756.688509   33.907515  975.485366   1.544911  4.150709   4.02276   \n",
-       "4  756.688509   33.907515  975.485366   1.544911  4.150709   4.02276   \n",
-       "\n",
-       "    acetate  chlorogenate     citrate  fumarate  ...  glutamate  isoleucine  \\\n",
-       "0  4.296019      2.428279  182.777927  0.079999  ...  45.478818    2.750447   \n",
-       "1  4.296019      2.428279  182.777927  0.079999  ...  45.478818    2.750447   \n",
-       "2  4.296019      2.428279  182.777927  0.079999  ...  45.478818    2.750447   \n",
-       "3  4.296019      2.428279  182.777927  0.079999  ...  45.478818    2.750447   \n",
-       "4  4.296019      2.428279  182.777927  0.079999  ...  45.478818    2.750447   \n",
-       "\n",
-       "   phenylalanine  tryptophane  tyrosine    valine  pyroglutamate  \\\n",
-       "0       5.153496     0.345287  1.624778  1.372135      24.046419   \n",
-       "1       5.153496     0.345287  1.624778  1.372135      24.046419   \n",
-       "2       5.153496     0.345287  1.624778  1.372135      24.046419   \n",
-       "3       5.153496     0.345287  1.624778  1.372135      24.046419   \n",
-       "4       5.153496     0.345287  1.624778  1.372135      24.046419   \n",
-       "\n",
-       "   trigonelline   choline   inositol  \n",
-       "0      1.078428  5.936098  65.898711  \n",
-       "1      1.078428  5.936098  65.898711  \n",
-       "2      1.078428  5.936098  65.898711  \n",
-       "3      1.078428  5.936098  65.898711  \n",
-       "4      1.078428  5.936098  65.898711  \n",
-       "\n",
-       "[5 rows x 28 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# %load http://pmb-bordeaux.fr/PyODAM/PyODAM_api_demo.py\n",
-    "\n",
-    "# Get the subset list of a dataset\n",
-    "dataset = 'frim1'\n",
-    "meta = getDataFromODAM(dataset)\n",
-    "meta[['index', 'LinkID','Subset','Identifier', 'Description']]\n",
-    "\n",
-    "# Get all values of a merged data subsets ( both activome & qNMR_metabofor) the specific 'sample' entry equal to 365\n",
-    "subset = 'activome,qNMR_metabo'\n",
-    "df = getSubsetFromODAM(dataset, subset,'sample/365?limit=10')\n",
-    "data = df['data']\n",
-    "\n",
-    "# View all merged subset columns\n",
-    "data.columns\n",
-    "\n",
-    "# Convert both data and time in MS Excel format into String\n",
-    "data.HarvestDate = convertDateToStr(data.HarvestDate)\n",
-    "data.HarvestHour = convertTimeToStr(data.HarvestHour)\n",
-    "data\n",
-    "\n",
-    "# Display the variable list within the 'factor' category of a merged data subset\n",
-    "df['factor']\n",
-    "\n",
-    "# Display the variable list within the 'identifier' category of a merged data subset\n",
-    "df['identifier']\n",
-    "\n",
-    "# Display the variable list within the 'quantitative' category of a merged data subset\n",
-    "quantitative = df['quantitative']\n",
-    "quantitative.loc[ 0:10, ]\n",
-    "\n",
-    "# Select the variables from the merged data belongings to the 'activome' data subset\n",
-    "data[quantitative[quantitative.Subset=='activome']['Attribute']]\n",
-    "\n",
-    "# Select the variables from the merged data belongings to the 'qNMR_metabo' data subset\n",
-    "data[quantitative[quantitative.Subset=='qNMR_metabo']['Attribute']]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "inputHidden": false,
-    "outputHidden": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "inputHidden": false,
-    "outputHidden": false
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1609,6 +1338,48 @@
   },
   "nteract": {
    "version": "0.15.0"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
