--- a/PyODAM_PCA.ipynb
+++ b/PyODAM_PCA.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import PyODAM as po\n",
+    "from PyODAM import Odam\n",
     "import PyODAM_pca as pcapo"
    ]
   },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,16 +38,15 @@
        "Name: Attribute, dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "## API Call to retrieve data\n",
-    "dataset = 'frim1'\n",
-    "subset = 'qNMR_metabo'\n",
-    "d = po.getSubsetFromODAM(dataset, subset)\n",
+    "po = Odam('https://pmb-bordeaux.fr','frim1')\n",
+    "d = po.getSubsetFromODAM('qNMR_metabo')\n",
     "\n",
     "## Retrieve factors\n",
     "d['factor']['Attribute']"
@@ -55,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +63,7 @@
        "['FF.01', 'FF.03', 'FR.01', 'FR.04', 'FR.02', 'FF.04', 'FF.02', 'FR.03']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +134,7 @@
        "array([38.27177796, 23.22130007, 14.47418228])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,6 +150,13 @@
    "source": [
     "#### 0ct, 4 2019  - Daniel Jacob INRA UMR 1332 - MetaboHub Bordeaux"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
