--- a/PyODAM_demo.ipynb
+++ b/PyODAM_demo.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import PyODAM as po"
+    "from PyODAM import Odam"
    ]
   },
   {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -187,21 +187,21 @@
        "11                              Amino Acids  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get the subset list of a dataset\n",
-    "dataset = 'frim1'\n",
-    "meta = po.getDataFromODAM(dataset)\n",
+    "po = Odam('https://pmb-bordeaux.fr','frim1')\n",
+    "meta = po.getDataFromODAM()\n",
     "meta[['index', 'LinkID','Subset','Identifier', 'Description']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
    "source": [
     "# Get all values of a merged data subsets ( both activome & qNMR_metabofor) the specific 'sample' entry equal to 365\n",
     "subset = 'activome,qNMR_metabo'\n",
-    "df = po.getSubsetFromODAM(dataset, subset,'sample/365?limit=10')\n",
+    "df = po.getSubsetFromODAM(subset,'sample/365?limit=10')\n",
     "data = df['data']\n",
     "\n",
     "# View all merged subset columns\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "[5 rows x 85 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
        "2  http://purl.obolibrary.org/obo/PO_0001002  fruit development stage  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +662,7 @@
        "5  http://edamontology.org/data_0842   identifier  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
        "10                 EC 4.2.1.3 Aconitase  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1304,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,6 +1313,20 @@
     "# Select the variables from the merged data belongings to the 'qNMR_metabo' data subset\n",
     "data[quantitative[quantitative.Subset=='qNMR_metabo']['Attribute']]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 0ct, 4 2019  - Daniel Jacob INRA UMR 1332 - MetaboHub Bordeaux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
